jsonata-native-fn/tests/ui/first-arg-is-not-string-literal.rs
use jsonata_native_fn::jsonata;

#[jsonata(1)]
fn test() {}

fn main() {}
